# qt6-dockerised-development

./: CMakeLists.txt  README.md  main.cpp
.devcontainer/: devcontainer.json
qml/hello/: FramedImage.qml  main.qml
